# Cloud_Management

./: .gitmodules  CMakeLists.txt  GUIDE.md  LICENSE  README.md  Tests.txt  requirements.txt
.github/workflows/: ci.yml
data/: pods.JSON
src/: CMakeLists.txt  CloudUtil.cpp  CloudUtil.hpp  Container.cpp  Container.hpp  Exceptions.cpp  Exceptions.hpp  KubernetesCluster.cpp  KubernetesCluster.hpp  Pod.cpp  Pod.hpp  Resource.cpp  Resource.hpp  Server.cpp  Server.hpp  cloudsim  main.cpp
tests/: CMakeLists.txt  test_Cluster.cpp  test_Container.cpp  test_Pod.cpp  test_Resource.cpp  test_Server.cpp
visualization/: Cloud_Vizualisation.txt  Pod_Vizualisation.txt
